<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Token Tracker</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="title_activity_main">Token Tracker</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_create_token">New Token Type</string>
    <string name="title_activity_create_player">Add Player</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="colors">Colors:</string>
    <string name="power">Power</string>
    <string name="toughness">Toughness</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="reset">Reset</string>
    <string name="heading_add_player">Add Player:</string>
    <string name="life">Life</string>
    <string name="white">White</string>
    <string name="blue">Blue</string>
    <string name="black">Black</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="artifact">Artifact</string>
    <string name="colorless">Colorless</string>
    <string name="text">Text</string>
    <string name="save">Save</string>
    <string name="hint_token_name">Token Name</string>
    <string name="hint_creature_type">Creature Type</string>
    <string name="hint_token_text">Token Text</string>
    <string name="player">Player</string>
    <string name="token">Token</string>
    <string name="random">Random</string>
    <string name="title_activity_randomizer">Randomizer</string>
    <string name="coin_flip_header">Flip a Coin:</string>
    <string name="flip">Flip</string>
    <string name="default_poison">0</string>
    <string name="default_life">20</string>
    <string name="result">Result</string>
    <string name="die_roll_header">Roll a Die:</string>
    <string name="roll">Roll</string>
    <string name="sides">Sides</string>
    <string name="done">Done</string>
    <string name="title_activity_spawn_token">Spawn Token</string>
    <string name="header_spawn_token">Spawn Token:</string>
    <string name="spawn">Spawn</string>
    <string name="new_token">New Token</string>
    <string name="spawn_token">Spawn Token</string>

</resources>