<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TokenCreator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="fill_horizontal"
    tools:context=".CreateTokenActivity" >

    <TableRow
        android:id="@+id/rowName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/identName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type" />

        <EditText
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="true"
            android:hint="@string/hint_token_name"
            android:inputType="text" />
    </TableRow>

    <TableRow
        android:id="@+id/rowType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/identType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type" />

        <EditText
            android:id="@+id/txtType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_creature_type"
            android:inputType="text" >

        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/rowSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/identPower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/power" />

        <EditText
            android:id="@+id/txtPower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/power"
            android:inputType="number" />
    </TableRow>

    <TableRow
        android:id="@+id/rowToughness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/identToughness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toughness" />

        <EditText
            android:id="@+id/txtToughness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/toughness"
            android:inputType="number" />
    </TableRow>

    <TableRow
        android:id="@+id/rowText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/identTokentext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text" />

        <EditText
            android:id="@+id/txtTokentext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_token_text"
            android:singleLine="false" />
    </TableRow>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/rowColorHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <TextView
                android:id="@+id/identColors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/colors"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <CheckBox
                android:id="@+id/chkColorless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="colorlessChecked"
                android:text="@string/colorless" />

        </TableRow>

        <TableRow
            android:id="@+id/rowColor1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <CheckBox
                android:id="@+id/chkWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/white" />

            <CheckBox
                android:id="@+id/chkBlue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blue" />

            <CheckBox
                android:id="@+id/chkBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/black" />

        </TableRow>

        <TableRow
            android:id="@+id/rowColor2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <CheckBox
                android:id="@+id/chkRed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/red" />

            <CheckBox
                android:id="@+id/chkGreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/green" />

            <CheckBox
                android:id="@+id/chkArtifact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/artifact" />

        </TableRow>

        <TableRow
            android:id="@+id/rowSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="saveToken"
                android:text="@string/save" />

            <Button
                android:id="@+id/btnReset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="resetForm"
                android:text="@string/reset" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="cancelCreation"
                android:text="@string/cancel" />

        </TableRow>

    </TableLayout>

</TableLayout>