<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btnRandom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/random"
        android:onClick="makeRandom" />

    <Button
        android:id="@+id/btnNewToken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnRandom"
        android:layout_alignParentRight="true"
        android:text="@string/new_token"
        android:onClick="newToken" />

    <Button
        android:id="@+id/btnSpawnToken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnNewToken"
        android:layout_alignParentRight="true"
        android:text="@string/spawn_token"
        android:onClick="spawnToken" />

</RelativeLayout>