<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/spawn_token_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SpawnTokenActivity" >

    <TextView
        android:id="@+id/identSpawnToken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginTop="@dimen/margin_10"
        android:text="@string/header_spawn_token"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/text_25" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_vertical|center_horizontal"
        android:layout_marginBottom="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_weight="1" >

        <RadioGroup
            android:id="@+id/grpTokens"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_10" >
        </RadioGroup>

    </ScrollView>

    <LinearLayout
        android:id="@+id/spawn_token_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|end"
        android:layout_marginBottom="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_weight="0"
        android:gravity="center_vertical|center_horizontal" >

        <Button
            android:id="@+id/btnSpawn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_10"
            android:text="@string/spawn"
            android:onClick="spawn" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_10"
            android:text="@string/cancel"
            android:onClick="cancel" />

    </LinearLayout>

</LinearLayout>